# school21

./: README.md
c/3D_viewer/: README.md
c/3D_viewer/src/: Doxyfile  Makefile
c/calculator/: README_RUS.md
c/calculator/src/: CMakeLists.txt  Doxyfile  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui
c/calculator/src/lib/: CMakeLists.txt  calc.c  calc.h  parse.c  parse.h  stack.c  stack.h
c/cat_grep_utils/: README.md
c/decimal_lib/: .gitignore  README.md
c/decimal_lib/src/: Makefile  s21_decimal.h
c/math_lib/: README.md
c/math_lib/src/: makefile  s21_math.h
c/matrix_lib/: README.md
c/matrix_lib/src/: Makefile  s21_matrix.h
c/string_lib/: README.md
c/string_lib/src/: Makefile  s21_string.h
cpp/calculator_cpp/: README.md
cpp/calculator_cpp/src/: CMakeLists.txt  Doxyfile  Makefile  controller.h  credit_controller.h  credit_model.h  depo_controller.h  depo_model.h  main.cc  model.h  qcustomplot.cc  view.cc  view.h  view.ui
cpp/containers_cpp/: README.md
cpp/matrix_lib_cpp/: README.md
devops/basic_cicd/: .gitlab-ci.yml  README.md
devops/linux_administration/: README.md
devops/linux_network/: README.md
devops/simple_docker/: README.md
sql_bootcamp/: README.md
sql_bootcamp/day00/: README.md
sql_bootcamp/day01/: README.md
sql_bootcamp/day02/: README.md
sql_bootcamp/day03/: README.md
sql_bootcamp/day04/: README.md
sql_bootcamp/day05/: README.md
sql_bootcamp/day06/: README.md
sql_bootcamp/day07/: README.md
sql_bootcamp/day08/: README.md
sql_bootcamp/day09/: README.md
sql_bootcamp/team01/: README.md
(+316 files in other folders)
